# bitcask

./: Cargo.toml  README.md
kvs/: Cargo.toml
kvs-client/: Cargo.toml
kvs-client/src/: client.rs  lib.rs  main.rs
kvs-server/: Cargo.toml
kvs-server/benches/: bench.rs  read.rs  utf8.rs
kvs-server/src/: engine.rs  lib.rs  main.rs  response.rs  server.rs  sled_engine.rs
kvs-server/src/engine/: sled_engine.rs
kvs/src/: command.rs  compaction_policy.rs  engine.rs  error.rs  file_util.rs  kv_store.rs  lib.rs
kvs/src/kv_store/: active_file.rs
kvs/tests/: kv_store.rs
logging/: Cargo.toml
logging/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: cmd.rs  lib.rs  response.rs
protocol/src/cmd/: reader.rs
src/: compaction_policy.rs  engine.rs  file_util.rs  kv_store.rs  lib.rs  protocol.rs
tests/: Cargo.toml  cli.rs  tests.rs
