[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["formatting"] }
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.5.0"
