[package]
name = "kvs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.4", features = ["derive"] }
logging = { path = "../logging" }
protocol = { path = "../protocol" }
tracing = "0.1.37"
