[package]
name = "kvs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.4", features = ["derive"] }
kvs = { path = "../kvs" }
logging = { path = "../logging" }
protocol = { path = "../protocol" }
sled = "0.34.7"
tracing = "0.1.37"
