[package]
name = "kvs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.4", features = ["derive"] }
kvs = { path = "../kvs" }
logging = { path = "../logging" }
protocol = { path = "../protocol" }
rand = "0.8"
sled = "0.34.7"
tempfile = "3"
tracing = "0.1.37"

[dev-dependencies]
crc32fast = "1"
criterion = "0.5"
sha3 = "0.10"
simdutf8 = "0.1"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

[[bench]]
name = "utf8"
harness = false
