[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
hashbrown = "0.14.3"
memmap2 = "0.9.3"
protocol = { path = "../protocol" }
time = { version = "0.3.20", features = ["formatting"] }
tracing = "0.1.37"

[dev-dependencies]
tempfile = "3.5.0"
walkdir = "2.3.3"
